{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 12,
  "lineage": "225d5681-bd05-d2d6-8036-34deb889c375",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.78.143.43",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-07-15T03:21:27.491-07:00",
            "id": "projects/infra-271212/regions/europe-west1/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-271212",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-271212/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-15T03:21:27.453-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-271212/global/firewalls/allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-271212/global/networks/default",
            "priority": 1000,
            "project": "infra-271212",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-271212/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-15T03:21:27.448-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-271212/global/firewalls/allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-271212/global/networks/default",
            "priority": 1000,
            "project": "infra-271212",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-271212/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-15T03:21:27.439-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-271212/global/firewalls/default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-271212/global/networks/default",
            "priority": 1000,
            "project": "infra-271212",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-271212/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    }
  ]
}